# InventoryManagerUI

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SKILLS.md  copilot-instructions.md  productinfotablemodel.cpp  productinfotablemodel.hpp
App_UI/: CMakeLists.txt
App_UI/qml/: AddProductDialog.qml  AddStaffDialog.qml  CardKPI.qml  InlineDatePicker.qml  InventoryPage.qml  InventoryStore.qml  Main.qml  NewOrderDialog.qml  OrderDetailDialog.qml  OrderRow.qml  OrdersPage.qml  OrdersStore.qml  PlaceholderPage.qml  RestockDialog.qml  SalesPage.qml  SalesStore.qml  SegmentedNav.qml  StaffPage.qml  StaffStore.qml  StatusBadge.qml
App_UI/src/: main.cpp
android/: AndroidManifest.xml  build.gradle  google-services.json
android/res/values/: strings.xml
ios/: Project-Info.plist
qml/: Main.qml  PluginMainItem.qml  config.json
qml/helper/: Constants.qml  CustomeTheme.qml  PluginListItem.qml  SectionContent.qml  SectionDescription.qml  SectionHeader.qml
qml/logic/: Logic.qml  ViewHelper.qml
qml/model/: DataModel.qml  RestAPI.qml
qml/pages/: AddNewOrderPage.qml  AddProductPage.qml  DashboardPage.qml  DashboardPage.qml.ANPXkB  DashboardPage.qml.UPBhjL  DashboardPage.qml.autosave.KFiKvJ  DashboardPage.qml.yHqznP  FirebaseLoginPage.qml  FirebasePage.qml  InventoryPage.qml  LoginPage.qml  OrdersPage.qml  OrdersPage.qml.LKrRAR  OrdersPage.qml.kefsyR  TodoListPage.qml
